<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".ExampleLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_exercise_2" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/hot"
        android:textOff="@string/cold"/>

    <CheckBox
        android:id="@+id/checkBox_milk2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/milk" />

    <CheckBox
        android:id="@+id/checkBox_sugar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sugar" />

    <CheckBox
        android:id="@+id/checkBox_lemon2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lemon" />
</LinearLayout>