<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:columnCount="2"
    tools:context=".ExampleLayout">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/to_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_row="0"
        android:layout_column="1"
        android:hint="@string/grid_hint_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:gravity="top"
        android:layout_rowWeight="1"
        android:hint="@string/hint_message"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:text="@string/button_message" />
</GridLayout>